--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,11 @@ function cube() {
 	num.value = Math.pow(num.value, 3);
 }
 
+function cuarta() {
+	var num = document.getElementByld("n2");
+	num.value = Math.pow(num.value, 4);
+}
+
 </script>
 
 </head>
@@ -15,6 +20,10 @@ function cube() {
 	Number:
 	<input type="text" id="n1">
 	<button onclick="cube()">x^3</button>
+
+	Number:
+	<input type="text" id="n2">
+	<button onclick="cuarta()">x^4</button>
 </body>
 </html>
 
