--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,11 @@ function cube() {
 	num.value = Math.pow(num.value, 3);
 }
 
+function sine() {
+	var nume = document.getElementByld("n2");
+	num.value = sin(num.value);
+}
+
 </script>
 
 </head>
@@ -15,6 +20,9 @@ function cube() {
 	Number:
 	<input type="text" id="n1">
 	<button onclick="cube()">x^3</button>
+	Number:
+	<input type="text" id="n2">
+	<button onclick="sine()">sin(x)</button>
 </body>
 </html>
 
